    https://imagemagick.org/discourse-server/viewtopic.php?f=1&t=37391).
  * Conditional compile for huge xml pages for RSVG delegate library.
  * Put "width" property in the PNG namespace (reference
    https://github.com/ImageMagick/ImageMagick/issues/1833).
  * -combine -colorspace sRGB no longer returns grayscale output (reference
    https://github.com/ImageMagick/ImageMagick/issues/1835).

2020-01-12  7.0.9-16 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-16, GIT revision 16719:fefd765:20200112.

2020-01-12  7.0.9-16 Cristy  <quetzlzacatenango@image...>
  * Fixed three failing Magick.NET unit tests.

2020-01-11  7.0.9-15 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-15, GIT revision 16709:0000f6d:20200111.

2020-01-11  7.0.9-15 Dirk Lemstra <dirk@lem.....org>
  * Also support svg:xml-parse-huge when using librsvg.

2020-01-10  7.0.9-15 Cristy  <quetzlzacatenango@image...>
  * Optimize -evaluate-sequence option (reference
    https://github.com/ImageMagick/ImageMagick/issues/1824).
  * Support Fx do() iterator.
  * `magick -size 100x100 xc:black black.pnm` no longer creates a white image
    (reference https://github.com/ImageMagick/ImageMagick/issues/1817).
  * setjmp/longjmp in jpeg.c no longer trigger undefind behavior (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37379).
  * Permit compositing in the CMYK colorspace (reference
    https://imagemagick.org/discourse-server/viewtopic.php?f=3&t=37368).

2020-01-04  7.0.9-14 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-14, GIT revision 16654:89ef7ea:20200104.

2020-01-01  7.0.9-14 Cristy  <quetzlzacatenango@image...>
  * Support extended Fx assignment operators (e.g. *=, /=, ++, --, etc.)
  * Support Fx for() iterator.
  * Optimize Fx performance.
  * Ensure circle.rb renders the same for IMv6 and IMv7 (reference
    https://github.com/rmagick/rmagick/issues/905).
