@@ -237,6 +237,166 @@ static void ConvertRGBToxyY(const double red,const double green,
   *cap_Y=Y;
 }
 
+static void inline ConvertXYZToJzazbz(const double X,const double Y,
+  const double Z,double *Jz,double *az,double *bz,const double peak_luminosity)
+{
+#define Jzazbz_b 1.15
+#define Jzazbz_g 0.66
+#define Jzazbz_c1 (3424.0/4096.0)
+#define Jzazbz_c2 (2413.0/128.0)
+#define Jzazbz_c3 (2392.0/128.0)
+#define Jzazbz_n (2610.0/16384.0)
+#define Jzazbz_p (1.7*2523.0/32.0)
+#define Jzazbz_d (-0.56)
+#define Jzazbz_d0 (1.6295499532821566e-11)
+
+  double
+    gamma,
+    Iz,
+    L,
+    Lp,
+    M,
+    Mp,
+    S,
+    Sp,
+    Xp,
+    Yp,
+    Zp;
+
+  Xp=(Jzazbz_b*X-Z*(Jzazbz_b-1));
+  Yp=(Jzazbz_g*Y-X*(Jzazbz_g-1));
+  Zp=Z;
+  L=0.41478972*Xp+0.579999*Yp+0.0146480*Zp;
+  M=(-0.2015100)*Xp+1.120649*Yp+0.0531008*Zp;
+  S=(-0.0166008)*Xp+0.264800*Yp+0.6684799*Zp;
+  gamma=pow(L/peak_luminosity,Jzazbz_n);
+  Lp=pow((Jzazbz_c1+Jzazbz_c2*gamma)/(1+Jzazbz_c3*gamma),Jzazbz_p);
+  gamma=pow(M/peak_luminosity,Jzazbz_n);
+  Mp=pow((Jzazbz_c1+Jzazbz_c2*gamma)/(1+Jzazbz_c3*gamma),Jzazbz_p);
+  gamma=pow(S/peak_luminosity,Jzazbz_n);
+  Sp=pow((Jzazbz_c1+Jzazbz_c2*gamma)/(1+Jzazbz_c3*gamma),Jzazbz_p);
+  Iz =0.5*Lp+0.5*Mp;
+  *az=3.52400*Lp-4.066708*Mp+0.542708*Sp+0.5;
+  *bz=0.199076*Lp+1.096799*Mp-1.295875*Sp+0.5;
+  *Jz=(Jzazbz_d+1.0)*Iz/(Jzazbz_d*Iz+1.0)-Jzazbz_d0;
+}
+
+static void inline ConvertJzazbzToXYZ(const double Jz,const double az,
+  const double bz,double *X,double *Y,double *Z,const double peak_luminosity)
+{
+  double
+    azz,
+    bzz,
+    gamma,
+    Iz,
+    L,
+    Lp,
+    M,
+    Mp,
+    S,
+    Sp,
+    Xp,
+    Yp,
+    Zp;
+
+  gamma=Jz+Jzazbz_d0;
+  Iz=gamma/(Jzazbz_d-Jzazbz_d*gamma+1.0);
+  azz=az-0.5;
+  bzz=bz-0.5;
+  Lp=Iz+0.138605043271539*azz+0.0580473161561189*bzz;
+  Mp=Iz-0.138605043271539*azz-0.0580473161561189*bzz;
+  Sp=Iz-0.0960192420263189*azz-0.811891896056039*bzz;
+  gamma=pow(Lp,1.0/Jzazbz_p);
+  L=peak_luminosity*pow((Jzazbz_c1-gamma)/(Jzazbz_c3*gamma-Jzazbz_c2),1.0/
+    Jzazbz_n);
+  gamma=pow(Mp,1.0/Jzazbz_p);
+  M=peak_luminosity*pow((Jzazbz_c1-gamma)/(Jzazbz_c3*gamma-Jzazbz_c2),1.0/
+    Jzazbz_n);
+  gamma=pow(Sp,1.0/Jzazbz_p);
+  S=peak_luminosity*pow((Jzazbz_c1-gamma)/(Jzazbz_c3*gamma-Jzazbz_c2),1.0/
+    Jzazbz_n);
+  Xp=1.92422643578761*L-1.00479231259537*M+0.037651404030618*S;
+  Yp=0.350316762094999*L+0.726481193931655*M-0.065384422948085*S;
+  Zp=(-0.0909828109828476)*L-0.312728290523074*M+1.52276656130526*S;
+  *X=(Xp+(Jzazbz_b-1.0)*Zp)/Jzazbz_b;
+  *Y=(Yp+(Jzazbz_g-1.0)**X)/Jzazbz_g;
+  *Z=Zp;
+}
+
+static void inline ConvertXYZToJzCzhz(const double X,const double Y,
+  const double Z,double *Jz,double *Cz,double *hz,const double peak_luminosity)
+{
+  double
+    az,
+    bz;
+
+  ConvertXYZToJzazbz(X,Y,Z,Jz,&az,&bz,peak_luminosity);
+  *Cz=sqrt((az-0.5)*(az-0.5)+(bz-0.5)*(bz-0.5));
+  *hz=atan2(bz-0.5,az-0.5)/(2.0*MagickPI);
+  if (*hz < 0)
+    *hz+=1.0;
+}
+
+static void inline ConvertJzCzhzToXYZ(const double Jz,const double Cz,
+  const double hz,double *X,double *Y,double *Z,const double peak_luminosity)
+{
+  double hue_radians = (hz >0.5 ? hz-1.0 : hz)*(2.0*MagickPI);
+  ConvertJzazbzToXYZ(Jz,Cz*cos(hue_radians)+0.5,Cz*sin(hue_radians)+0.5,X,Y,Z,
+    peak_luminosity);
+}
+
+static void ConvertRGBToJzazbz(const double red,const double green,
+  const double blue,double *Jz,double *az,double *bz,
+  const double peak_luminosity)
+{
+  double
+    X,
+    Y,
+    Z;
+
+  ConvertRGBToXYZ (red,blue,green,&X,&Y,&Z);
+  ConvertXYZToJzazbz(X,Y,Z,Jz,az,bz,peak_luminosity);
+}
+
+static void ConvertJzazbzToRGB(const double Jz,const double az,
+  const double bz,double *red,double *green,double *blue,
+  const double peak_luminosity)
+{
+  double
+    X,
+    Y,
+    Z;
+
+  ConvertJzazbzToXYZ(Jz,az,bz,&X,&Y,&Z,peak_luminosity);
+  ConvertXYZToRGB (X,Y,Z,red,blue,green);
+}
+
+static void ConvertRGBToJzCzhz(const double red,const double green,
+  const double blue,double *Jz,double *Cz,double *hz,
+  const double peak_luminosity)
+{
+  double
+    X,
+    Y,
+    Z;
+
+  ConvertRGBToXYZ (red,blue,green,&X,&Y,&Z);
+  ConvertXYZToJzCzhz(X,Y,Z,Jz,Cz,hz,peak_luminosity);
+}
+
+static void ConvertJzCzhzToRGB(const double Jz,const double Cz,
+  const double hz,double *red,double *green,double *blue,
+  const double peak_luminosity)
+{
+  double
+    X,
+    Y,
+    Z;
+
+  ConvertJzCzhzToXYZ(Jz,Cz,hz,&X,&Y,&Z,peak_luminosity);
+  ConvertXYZToRGB (X,Y,Z,red,blue,green);
+}
+
 static void ConvertRGBToYDbDr(const double red,const double green,
   const double blue,double *Y,double *Db,double *Dr)
 {
@@ -501,6 +661,8 @@ static MagickBooleanType sRGBTransformImage(Image *image,
     case HSLColorspace:
     case HSVColorspace:
     case HWBColorspace:
+    case JzazbzColorspace:
+    case JzCzhzColorspace:
     case LabColorspace:
     case LCHColorspace:
     case LCHabColorspace:
@@ -515,9 +677,19 @@ static MagickBooleanType sRGBTransformImage(Image *image,
     case YPbPrColorspace:
     case YUVColorspace:
     {
+      const char
+        *value;
+
+      double
+        peak_luminosity;
+
       /*
         Transform image from sRGB to target colorspace.
       */
+      peak_luminosity=10000;
+      value=GetImageProperty(image,"peak-luminosity",exception);
+      if (value != (const char *) NULL)
+        peak_luminosity=StringToDouble(value,(char **) NULL);
       if (image->storage_class == PseudoClass)
         {
           if (SyncImage(image,exception) == MagickFalse)
@@ -603,6 +775,16 @@ static MagickBooleanType sRGBTransformImage(Image *image,
             case HWBColorspace:
             {
               ConvertRGBToHWB(red,green,blue,&X,&Y,&Z);
+              break;
+            }
+            case JzazbzColorspace:
+            {
+              ConvertRGBToJzazbz(red,green,blue,&X,&Y,&Z,peak_luminosity);
+              break;
+            }
+            case JzCzhzColorspace:
+            {
+              ConvertRGBToJzCzhz(red,green,blue,&X,&Y,&Z,peak_luminosity);
               break;
             }
             case LabColorspace:
@@ -2034,6 +2216,8 @@ static MagickBooleanType TransformsRGBImage(Image *image,
     case HSLColorspace:
     case HSVColorspace:
     case HWBColorspace:
+    case JzazbzColorspace:
+    case JzCzhzColorspace:
     case LabColorspace:
     case LCHColorspace:
     case LCHabColorspace:
@@ -2048,9 +2232,19 @@ static MagickBooleanType TransformsRGBImage(Image *image,
     case YPbPrColorspace:
     case YUVColorspace:
     {
+      const char
+        *value;
+
+      double
+        peak_luminosity;
+
       /*
         Transform image from source colorspace to sRGB.
       */
+      peak_luminosity=10000;
+      value=GetImageProperty(image,"peak-luminosity",exception);
+      if (value != (const char *) NULL)
+        peak_luminosity=StringToDouble(value,(char **) NULL);
       if (image->storage_class == PseudoClass)
         {
           if (SyncImage(image,exception) == MagickFalse)
@@ -2136,6 +2330,16 @@ static MagickBooleanType TransformsRGBImage(Image *image,
             case HWBColorspace:
             {
               ConvertHWBToRGB(X,Y,Z,&red,&green,&blue);
+              break;
+            }
+            case JzazbzColorspace:
+            {
+              ConvertJzazbzToRGB(X,Y,Z,&red,&green,&blue,peak_luminosity);
+              break;
+            }
+            case JzCzhzColorspace:
+            {
+              ConvertJzCzhzToRGB(X,Y,Z,&red,&green,&blue,peak_luminosity);
               break;
             }
             case LabColorspace:
