@@ -9,6 +9,8 @@
     https://github.com/ImageMagick/ImageMagick/issues/1833).
   * -combine -colorspace sRGB no longer returns grayscale output (reference
     https://github.com/ImageMagick/ImageMagick/issues/1835).
+  * Support Jzazbz & JzCzhz colorspaces (contributed by snibgo @
+    http://im.snibgo.com/jzazbz.htm).
 
 2020-01-12  7.0.9-16 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.9-16, GIT revision 16719:fefd765:20200112.
